Retrieve/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Punctual_follow_up__c</fullName>
        <description>Suivi Ponctuel</description>
        <label>Punctual follow up</label>
        <picklist>
            <picklistValues>
                <fullName>1ACCESS_Rétroviseurs électrique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1TCC_Fuite rampe gasoil K9K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1TM_con_rod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2ème tour et suivants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5_PER4 Multi-incidentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Year Ext. Warr. Com Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Year Ext. Warr. Com Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9A0_Mec Méca. avec Déplacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9A0_Mec Méca. sans Déplacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9A1_Mec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9A1_MeC amiable sécuritaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 A1_MEC Amiable Sécuritaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9A1_MeC expertise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9A2 MeC amiable carrosserie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9J0_MeC judiciaire Mécanique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9J0 MeC Judiciaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9J1_MeC judiciaire sécuritaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9J2 MeC judiciaire carrosserie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9X3 MeC Produit Apres-vente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activ réseau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aktion ZOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akumulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amortyzatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Análisis Aceite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANKET YOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armaturenbrett / Planche de bord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistance Réseau niveau 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attente de documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attente diagnostic</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Second_name_Web__c</fullName>
        <label>Second name Web</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Acknowledgements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledgements / Compliment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATTESTATION CONSTRUCTEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATTESTATION DE TRANSFORMATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATTESTATION ET FRANCISATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakdown Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARNET GARANTIE ET ENTRETIEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Donations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication &amp; Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprehensive Car Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Network Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Reminder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUPLICATA DE COC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEC Type conformity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELECTRIC VEHICLE</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Category_2__c</fullName>
        <inlineHelpText>Who is responsible to analyse the issue and solve it ?</inlineHelpText>
        <label>Solution Responsible</label>
        <picklist>
            <controllingField>Device_Brand__c</controllingField>
            <picklistValues>
                <fullName>ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COYOTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FICOSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyRenault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyZE ONLINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RENAULT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOMTOM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Category_3__c</fullName>
        <inlineHelpText>Where is implemented the solution ?</inlineHelpText>
        <label>Solution Location</label>
        <picklist>
            <controllingField>Technical_Category_2__c</controllingField>
            <picklistValues>
                <fullName>Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppMarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSDB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataSharing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M2M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisionning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WareHouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Web__c</fullName>
        <label>Title Web</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VNVO_V2__c</fullName>
        <formula>IF( VIN__r.CountRelationV2__c&gt;1, &apos;VO&apos;, IF( VIN__r.CountRelationV2__c=1, &apos;VN&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VNVO_V2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <description>This field will be used to display the vehicle model values</description>
        <label>Vehicle Model</label>
        <picklist>
            <picklistValues>
                <fullName>370Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>370Z ROADSTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCESSOIRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSURANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVANTIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABSTAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPTUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO 4 Grandtour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clio 4 Initiale Paris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO 4 RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO 4 SPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO COLLECTION EXPRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO GRANDTOUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO SPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIO VAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREDIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA 1300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA 1310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA 1420</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA DOUBLE CAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA PICK-UP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACIA SPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DER MASTER PKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEZIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEZIR ZE</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MA_Dossiers_en_retard_BO_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Answer__c</columns>
        <columns>Detail__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CountryCase__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Spam__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>MA-Dossiers en retard BO</label>
        <language>en_US</language>
        <queue>MA_Dossiers_en_retard_BO</queue>
        <sharedTo>
            <role>MA_Agent_Back_Office_L1</role>
            <role>MA_Agent_Back_Office_L2</role>
            <role>MA_Director</role>
            <role>MA_Manager</role>
            <role>MA_Supervisor_BO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MA_Dossiers_en_retard_FO_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Answer__c</columns>
        <columns>Detail__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CountryCase__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Spam__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>MA-Dossiers en retard FO</label>
        <language>en_US</language>
        <queue>MA_Dossiers_en_retard_FO</queue>
        <sharedTo>
            <role>MA_Agent_Front_Office_L1</role>
            <role>MA_Agent_Front_Office_L2</role>
            <role>MA_Director</role>
            <role>MA_Manager</role>
            <role>MA_Supervisor_FO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MA_File_d_attente_BO_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Answer__c</columns>
        <columns>Detail__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CountryCase__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Spam__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>MA-File d’attente BO</label>
        <language>en_US</language>
        <queue>MA_File_d_attente_BO</queue>
        <sharedTo>
            <role>MA_Agent_Back_Office_L1</role>
            <role>MA_Agent_Back_Office_L2</role>
            <role>MA_Director</role>
            <role>MA_Manager</role>
            <role>MA_Supervisor_BO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MA_File_d_attente_FO_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Answer__c</columns>
        <columns>Detail__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CountryCase__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Spam__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>MA-File d’attente FO</label>
        <language>en_US</language>
        <queue>MA_File_d_attente_FO</queue>
        <sharedTo>
            <role>MA_Agent_Front_Office_L1</role>
            <role>MA_Agent_Front_Office_L2</role>
            <role>MA_Director</role>
            <role>MA_Manager</role>
            <role>MA_Supervisor_FO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UA_BO_Cases_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Spam__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Обращения Бэк Офиса</label>
        <language>en_US</language>
        <queue>UA_BO_Cases</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>Ukraine</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UA_FO_cases_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Spam__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Обращения Фронт Офиса</label>
        <language>en_US</language>
        <queue>UA_FO_cases</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>Ukraine</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UA_Web2case_Formulaires_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Spam__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Обращения с сайта и на имейл</label>
        <language>en_US</language>
        <queue>UA_Web2case_Formulaires</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>Ukraine</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>AT_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>This is for Austria country Setup</description>
        <label>AT Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Adriatic_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>Adriatic Case Record Type</description>
        <label>Adriatic Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>CH_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>Switzerland Case Recordtype</description>
        <label>CH Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>CS_Case_Rec_Type</fullName>
        <active>true</active>
        <businessProcess>CS Support Process</businessProcess>
        <description>Connected Services Case Record Type</description>
        <label>CS Case Rec Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Case_Community_Rec_Type</fullName>
        <active>true</active>
        <businessProcess>Core Case Support Process</businessProcess>
        <description>R-Force:Release 4 This recordtype is used for community users</description>
        <label>Core Case Community Rec Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Case_Community_Submitted_Rec_Type</fullName>
        <active>true</active>
        <businessProcess>Core Case Support Process</businessProcess>
        <description>This Recordtype is created to give read only mode once the case is sumitted</description>
        <label>Core Case Community Submitted Rec Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>DE_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>Germany Case Recordtype</description>
        <label>DE Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>DZ_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>Algeria Record Type for case</description>
        <label>DZ Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>ES_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>RForce ES Case Record Type</description>
        <label>ES Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>FR_Case_Certificate_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>RForce FR Case Certificate Record Type</description>
        <label>FR Case Certificate RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>FR_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>RForce FR Case Record Type</description>
        <label>FR Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>IN_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>RForce IN Case Record Type</description>
        <label>IN_Case_RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>RForce IT Case Record Type</description>
        <label>IT Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>MA_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>RForce Morocco Case Record Type</description>
        <label>MA Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>This Record Type is for Mexico Country</description>
        <label>MX Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>MidCE_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>RForce MidCE Case Record Type</description>
        <label>MidCE Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>NR_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>This is Core Recordtype for country setup</description>
        <label>NR_Case_RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>PL_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>This is Core Recordtype for country setup</description>
        <label>PL Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>PT_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>Portugal Case Record Type</description>
        <label>PT Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>RO_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>RForce Romania Case Record Type</description>
        <label>RO Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>This is Turkey Specific RecordType</description>
        <label>TR Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>UA_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>This Record type is for Ukraine</description>
        <label>UA Case RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK_Case_RecType</fullName>
        <active>true</active>
        <businessProcess>CORE Support Process</businessProcess>
        <description>RForce UK Case Record Type</description>
        <label>UK Case RecType</label>
    </recordTypes>
</CustomObject>